tests/machine/x/fs/tree_sum.error
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/machine/x/fs/tree_sum.fs(20,7): error FS0727: This union case expects 3 arguments in tupled form

/workspace/mochi/tests/machine/x/fs/tree_sum.fs(21,16): error FS0001: This expression was expected to have type
    Anon2    
but here has type
    Tree    

/workspace/mochi/tests/machine/x/fs/tree_sum.fs(22,24): error FS0001: This expression was expected to have type
    Tree    
but here has type
    Anon2    
