tests/machine/x/fs/tree_sum.fs
// Generated by Mochi compiler v0.10.27 on 2025-07-17T07:48:47Z
open System

type Anon1 = {
    left: obj
    value: int
    right: obj
}
type Anon2 = {
    left: obj
    value: int
    right: Anon1
}
type Tree =
    | Leaf
    | Node of Tree * int * Tree
let sum_tree (t) =
    (match t with
    | Leaf -> 0
    | Node left value right -> sum_tree left + value + sum_tree right)
let t: Anon2 = Node(Leaf, 1, Node(Leaf, 2, Leaf))
printfn "%A" (sum_tree t)
